# worktree-v2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: config.yaml  dolt-server.activity  issues.jsonl
.beads/backup/: backup_state.json  events.jsonl  issues.jsonl
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: worktree-task.md
.claude/skills/: superintendent
.github/workflows/: ci.yml  version-check.yml
commands/: cleanup.md  list.md  ralph.md  resume.md  spawn.md
docs/: ARCHITECTURE.md  BEADS_BEST_PRACTICES.md  test-audit-report.md
docs/plans/: 2026-03-02-dolt-in-sandbox-design.md  2026-03-02-dolt-in-sandbox-plan.md
docs/superpowers/plans/: 2026-04-07-cr-handoff-respond.md  2026-04-30-superintendent-skill.md
docs/superpowers/specs/: 2026-04-06-status-tracker-fix-design.md  2026-04-07-cr-handoff-respond-design.md  2026-04-21-superintendent-skill-design.md
plugins/worktree-v2/: pyproject.toml
plugins/worktree-v2/.claude-plugin/: plugin.json
plugins/worktree-v2/commands/: cleanup.md  list.md  ralph.md  resume.md  spawn.md
plugins/worktree-v2/docs/: BEADS_BEST_PRACTICES.md  WORKTREE_V2_DESIGN.md
plugins/worktree-v2/scripts/backends/: auth.py  docker.py  factory.py  git.py  terminal.py
plugins/worktree-v2/scripts/cli/: cleanup.py  ralph.py  resume.py  spawn.py  worktree.py
plugins/worktree-v2/scripts/orchestrator/: executor.py  models.py  planner.py  step_handler.py
plugins/worktree-v2/scripts/state/: checkpoint.py  ralph.py  registry.py  workflow.py
plugins/worktree-v2/scripts/tests/: conftest.py  test_auth_backend.py  test_backend_factory.py  test_checkpoint.py  test_cleanup_cli.py  test_docker_backend.py  test_executor.py  test_git_backend.py  test_models.py  test_planner.py  test_ralph_cli.py  test_ralph_state.py  test_registry.py  test_resume_cli.py  test_slash_commands.py  test_spawn_cli.py  test_step_handler.py  test_terminal_backend.py  test_workflow.py  test_worktree_cli.py
src/superintendent/: __init__.py
src/superintendent/backends/: __init__.py  auth.py  docker.py  factory.py  git.py  terminal.py
src/superintendent/cli/: __init__.py  main.py
src/superintendent/docs/: __init__.py  introspect.py  model.py  render.py
src/superintendent/docs/assets/skills/superintendent/: CLI_REFERENCE.md  SKILL.md  cli-reference.json
src/superintendent/orchestrator/: __init__.py  executor.py  models.py  orchestrator.py  planner.py  repo_info.py  reporter.py  step_handler.py  strategy.py
src/superintendent/orchestrator/sources/: __init__.py  beads.py  detect.py  markdown.py  models.py  protocol.py  single.py  speckit.py
src/superintendent/state/: __init__.py  checkpoint.py  ralph.py  registry.py  token_store.py  workflow.py
tests/: conftest.py  test_auth_backend.py  test_backend_factory.py  test_beads_source.py  test_checkpoint.py  test_cli.py  test_cli_reference.py  test_detect_source.py  test_docker_backend.py  test_docs_command.py  test_docs_introspect.py  test_docs_model.py  test_docs_render.py  test_dry_run.py  test_e2e.py  test_executor.py  test_explain_flag.py  test_git_backend.py  test_install_skill.py  test_integration.py  test_markdown_source.py  test_models.py  test_orchestrator.py  test_planner.py  test_plugin_manifest.py  test_ralph_state.py  test_registry.py  test_repo_info.py  test_reporter.py  test_single_source.py  test_slash_commands.py  test_smart_cleanup.py  test_speckit_source.py  test_status.py  test_step_handler.py  test_strategy.py  test_task_source.py  test_terminal_backend.py  test_token_store.py  test_verbosity.py  (+1 more)
