[project]
name = "superintendent-cli"
version = "0.1.0"
description = "Agent orchestration CLI for spawning autonomous Claude agents in Docker sandboxes"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brendan Whitney" }]

dependencies = [
    "typer>=0.12",
]

[project.scripts]
superintendent = "superintendent.cli.main:app"
sup = "superintendent.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ty>=0.0.15",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superintendent"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "FA100",  # don't suggest adding `from __future__ import annotations` (3.11+ target)
]

[tool.ruff.lint.isort]
known-first-party = ["superintendent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["src/superintendent"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
